--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-	"name": "react-castorandpollux",
+	"name": "castorandpollux2.0",
 	"version": "0.1.0",
-	"homepage": "https://jon-slva.github.io/react-castorandpollux",
+	"homepage": "https://jon-slva.github.io/castorandpollux2",
 	"private": true,
 	"dependencies": {
 		"@testing-library/jest-dom": "^5.17.0",
