--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
 	"name": "castorandpollux",
 	"version": "0.1.0",
-	"homepage": "https://jon-slva.github.io/castorandpollux/",
+	"homepage": "https://www.castorandpolluxofficial.com/",
 	"private": true,
 	"dependencies": {
 		"@testing-library/jest-dom": "^5.17.0",
