Update New Releases data - add "Wish For You"

--- a/src/data/recent_releases.json
+++ b/src/data/recent_releases.json
@@ -1,5 +1,8 @@
 [
 	{
+		"spotifyId": "6f1SxCySPmWdRcZXJKMr0a"
+	},
+	{
 		"spotifyId": "0lQZzNG1aSVkzO223oNhn5"
 	},
 	{
@@ -7,8 +10,5 @@
 	},
 	{
 		"spotifyId": "63unE8VKOuVnSUl1gM7AmB"
-	},
-	{
-		"spotifyId": "2nibAHzEdndxBW3cptLffC"
 	}
 ]
